--- a/NewsApp_v1/home.html
+++ b/NewsApp_v1/home.html
@@ -10,14 +10,14 @@
   <div class="row bxslider" ng-repeat="myNew in myNews | unique: 'cagtegory'" >
           <div class="col-md-4"  ng-repeat="subset in myNews| filter: myNew.cagtegory ">
           <div class="col-md-12 img-wrapper">
-          <img class="img-responsive display-img"  src="{{subset.urlToImage}}"/>
-          <p class="col-md-12 slide-title">{{subset.title| limitTo: 75 }}{{subset.title.length > 75 ? '...' : ''}}</p>
+          <img class="img-responsive display-img"  src="{{subset.urlToImage}}"/><a href="{{subset.url}}" target="_blank">
+          <p class="col-md-12 slide-title">{{subset.title| limitTo: 75 }}{{subset.title.length > 75 ? '...' : ''}}</p></a>
            <p class="icons">
           <i class="fa fa-bookmark" aria-hidden="true" ng-click="saved = !saved; isSaved(subset, $event)" ng-class="{'saved': saved} "> </i>
           <i class="fa fa-thumbs-o-up" aria-hidden="true" ng-click="like = !like" ng-class="{'like': like} "></i>
           <i class="fa fa-thumbs-o-down" aria-hidden="true" ng-click="dislike = !dislike" ng-class="{'dislike': dislike} "> </i>
-          </p></div>
-          <p class="col-md-12 slide-description">{{subset.description | limitTo: 160 }}{{subset.description.length > 160 ? '...' : ''}}</p>
+          </p></div><a href="{{subset.url}}" target="_blank">
+          <p class="col-md-12 slide-description">{{subset.description | limitTo: 160 }}{{subset.description.length > 160 ? '...' : ''}}</p></a>
           </div>
   </div>
 
